<Attempting to correct text align issues with source code comparisons>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,13 +139,13 @@ main {
     padding: 0 20px;
 }
 
-hr {
+ #benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
 
 #circle-cover-bg {
-    background: url("../images/reasons-image.webp") no-repeat top center / cover;
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
@@ -154,11 +154,13 @@ hr {
     max-width: 300px;
     max-height: 300px;
 }
-#benefits-mage {
+#benefits-image {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+
 
 /* Footer */
 #social-networks {
